src/test/ui/consts/const-eval/union-const-eval-field.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/union-const-eval-field.rs:28:5
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 8) {
               __ __ __ __ __ __ __ __                         │ ░░░░░░░░
           }

error[E0080]: erroneous constant used
  --> $DIR/union-const-eval-field.rs:30:5
   |
LL |     FIELD3
   |     ^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
